# otus-hw4

./: CMakeLists.txt  README.md  files.html  globals_vars.html  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  navtreedata.js  pages.html
.github/workflows/: release.yml
html/: globals.html  globals_func.html  index.html  main_8cpp.js  md_README.html  navtreeindex0.js
html/search/: all_2.js  all_7.js  all_9.js  functions_1.js  pages_1.js  variables_0.js
latex/: main_8cpp.tex  main_8cpp__incl.md5  md_README.tex  refman.tex
search/: all_1.js  searchdata.js
